# AgentHub

./: .gitignore  README.md  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: types.ts
src/lib/components/: ChatPanel.svelte  InputBar.svelte  Sidebar.svelte  Titlebar.svelte
src/lib/styles/: global.css
src/routes/: +layout.svelte  +page.svelte
