[package]
name = "agent-hub"
version = "0.1.0"
description = "Agent Hub - Manage CLI agents as child processes"
authors = ["Lukas Drsticka"]
edition = "2021"

[lib]
name = "agent_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wait-timeout = "0.2"
